Fixed: Overflow in login caused by long width in language div

--- a/css/Login.css
+++ b/css/Login.css
@@ -145,7 +145,7 @@
 	left			: 50%;
 	margin-left		: -70px;
 	top			: 40px;
-	width			: 100%;
+	width			: 30%;
 }
 
 #LangDiv ul
